# CXXModule-Example

./: CMakeLists.txt  LICENSE  README.md  bar.cpp  foo.cppm  foobar.cpp  main.cpp  std.cppm
